--- a/assets/style/_fonts.scss
+++ b/assets/style/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Stolzl';
     src: local('Stolzl'),
-      url(~assets/fonts/Stolzl-Bold.woff2) format('woff2'),
-      url(~assets/fonts/Stolzl-Bold.woff) format('woff');
+      url(@/assets/fonts/Stolzl-Book.woff2) format('woff2'),
+      url(@/assets/fonts/Stolzl-Book.woff) format('woff');
 }
